[package]
name = "uart-buster"
version = "0.1.0"
authors = ["Ben Lichtman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
embedded-hal = "0.2.3"
nrf51-hal = "0.7.1"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
cortex-m = "0.6.1"
nb = "0.1.2"
alloc-cortex-m = "0.3.5"

[profile.dev]
debug = true
opt-level = 3

[profile.release]
debug = false
lto = "fat"
opt-level = 3
